# SimpleFileHost

./: CMakeLists.txt  README.md  build.sh  install.sh  remove.sh
debian/: changelog  control  copyright  install  simplefilehost.1  simplefilehost.install  simplefilehost.manpages  watch
debian/upstream/: metadata  signing-key.asc
src/: cli.cpp  cli.h  main.cpp  server.cpp  server.h  utils.cpp  utils.h
src/cli/: cli.cpp  cli.h
src/qr/: qr_display.cpp  qr_display.h
src/server/: client_handler.cpp  client_handler.h  file_transfer.cpp  file_transfer.h  http_handlers.cpp  http_handlers.h  server.cpp  server.h
src/utils/: archive_utils.cpp  archive_utils.h  file_utils.cpp  file_utils.h  network_utils.cpp  network_utils.h  server_utils.cpp  server_utils.h  utils.cpp  utils.h
